[B][COLOR=FFFF8C00]BUILD 6.1.9 - RELEASE DATE 05/30/2015[/COLOR][/B]
Added:  New video view "shelfcase"
Fixed:  Genre icon issue in Panel View
Improved:  Audio case is now available in Wall view mode
Improved:  Support for script.games.rom.collection.browser
Improved:  Export/Import skin settings now uses script.toolbox (required for install)

[B][COLOR=FFFF8C00]BUILD 6.1.8 - RELEASE DATE 04/18/2015[/COLOR][/B]
Added:  Live TV recordings is now available to be added to the main menu via customize main menu
Improved:  Now recording/Next recording slide in popup provided for both Live TV-EPG and Live TV-Recordings when set as main menu items
Improved:  Added MPAA flags for French video
Fixed:  Multiplex view panel display time brought up wrong dialog window
Fixed:  Live TV Recordings wide view now has correct focus shading and scrollbar 
Fixed:  Recently added movies widgets now bring up dialog on click to play/resume/launch cinema experience
Fixed:  It is now possible to set episode bookmarks for tv shows with multiple episodes per file

[B][COLOR=FFFF8C00]BUILD 6.1.7 - RELEASE DATE 03/05/2015[/COLOR][/B]

Added:  Live TV EPG is now available to be added to the main menu via customize main menu
Added:  Weather widgets and MyWeather now support Yahoo! Weather  (current, 36 hour views)
Added:  CoverFlow view now available for program addons
Improved:  Addon TV.Show.Next.Aired widgets now work for live TV main menu
Improved:  Addon TV.Show.Next.Aired now requires ver 6.0.10 (minimum) and no longer is run at skin startup
Improved:  In the music m3u playlist editor dialog, button label has been changed from "CLOSE" to "CLEAN" (when this button is clicked, the list of playlist music files is cleared)
Fixed:  Recording Preferences dialog window focus issues when PVR client is pvr.npvr (Next PVR)
Fixed:  Adjusted positions of main menu items so the focused item (wraplist) is centered