@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	<!-- Aeon MQ 5 Helix 6.1.0/6.1.1/6.1.4/6.1.5/6.1.9 Shelfcase Mod -->
+	<!-- Aeon MQ 5 Helix 6.1.0/6.1.1/6.1.4/6.1.5/6.1.9 Shelfcase Mod/6.1.10 -->
 
 <includes>
 	<include file="Defaults.xml"/>
@@ -2418,7 +2418,7 @@
 			<visible>Container.CanFilter + !Container.CanFilterAdvanced</visible>
 		</control>
 		<control type="radiobutton" id="98"><!-- Adv Filter -->
-			<include>TopMenuButton</include>
+			<include>TopMenuRadioButton</include>
 			<label>587</label>
 			<onclick>SetFocus(50)</onclick>
 			<onclick>Filter</onclick>
