@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-	<addon id="skin.aeonmq5" version="6.1.9" name="Aeon MQ 5 Helix" provider-name="MarcosQui">
+	<addon id="skin.aeonmq5" version="6.1.10" name="Aeon MQ 5 Helix" provider-name="MarcosQui">
 	<requires>
 	<import addon="xbmc.gui" version="5.3.0"/>
 	<import addon="script.aeonmq5.extrapack" version="1.0.1"/>
